apps/attic/manifest.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: nix-cache
    app.kubernetes.io/name: attic
  name: attic
  namespace: attic
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app.kubernetes.io/name: attic
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: nix-cache
    app.kubernetes.io/name: attic
  name: attic
  namespace: attic
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: attic
  template:
    metadata:
      labels:
        app.kubernetes.io/component: nix-cache
        app.kubernetes.io/name: attic
    spec:
      containers:
      - args:
        - "--config"
        - "/etc/attic/server.toml"
        - "--mode"
        - api-server
        command:
        - atticd
        image: registry.ide-newton.ts.net/lab/attic@sha256:c2bcd67a587787bcf8ecdb346306b5075c3f4bb11804a83cb5f9305538c03aa1
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            httpHeaders:
            - name: Host
              value: attic.attic.svc.cluster.local
            path: "/"
            port: http
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
        name: attic
        ports:
        - containerPort: 8080
          name: http
        readinessProbe:
          httpGet:
            httpHeaders:
            - name: Host
              value: attic.attic.svc.cluster.local
            path: "/"
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 3
        resources:
          limits:
            cpu: '2'
            memory: 4Gi
          requests:
            cpu: 500m
            memory: 1Gi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 65532
          runAsNonRoot: true
          runAsUser: 65532
        volumeMounts:
        - mountPath: "/etc/attic"
          name: attic-config
          readOnly: true
        - mountPath: "/tmp"
          name: tmp
      securityContext:
        fsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      volumes:
      - configMap:
          name: attic-config
        name: attic-config
      - emptyDir: {}
        name: tmp
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    tailscale.com/tags: tag:k8s
  name: attic-tailscale
  namespace: attic
spec:
  ingressClassName: tailscale
  rules:
  - host: attic.ide-newton.ts.net
    http:
      paths:
      - backend:
          service:
            name: attic
            port:
              number: 80
        path: "/"
        pathType: Prefix
  tls:
  - hosts:
    - attic.ide-newton.ts.net
